# ml_api

./: README.md
docker/: Dockerfile_api  Dockerfile_worker  dev.env.yml  docker-compose.yml
scripts/: start.sh  start_develop.sh  stop.sh  test.sh
src/ml_api/: app.py  pyproject.toml  settings.py
src/ml_api/api/handlers/: __init__.py  handlers.py
src/ml_api/api/models/: __init__.py  analist.py
src/ml_api/api/routers/: sentiment_analysis.py
src/ml_api/api/schemas/: __init__.py  api.py  message.py  sentence.py
src/ml_api/api/validators/: __init__.py  sentence.py
src/ml_api/cli/: manage.py
src/ml_api/communication/: __init__.py  kafka.py  redis.py
src/ml_api/templates/: index.html  item.html
src/worker/: pyproject.toml  worker.py
src/worker/analist/: settings.py
src/worker/analist/communication/: __init__.py  kafka.py  redis.py
src/worker/analist/model/: __init__.py  model.py
src/worker/analist/schemas/: __init__.py  sentence.py
src/worker/analist/validators/: __init__.py  sentence.py
